# fabruic

./: .gitignore  .prettierignore  .prettierrc.toml  85261.txt  Cargo.toml  README.md  certificate.rs  clippy.toml  lints.txt  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
coverage/: index.html
coverage/examples/: basic.rs.html  index.html  onestream.rs.html  twostream.rs.html
coverage/src/: certificate.rs.html  error.rs.html  index.html  lib.rs.html
coverage/src/quic/: index.html  task.rs.html
coverage/src/quic/connection/: connecting.rs.html  incoming.rs.html  index.html  mod.rs.html  receiver.rs.html  receiver_stream.rs.html  sender.rs.html
coverage/src/quic/endpoint/: builder.rs.html  index.html  mod.rs.html
coverage/src/quic/endpoint/builder/: config.rs.html  index.html  mod.rs.html
coverage/src/x509/: certificate.rs.html  certificate_chain.rs.html  index.html  mod.rs.html  private_key.rs.html
examples/: basic.rs  onestream.rs  twostream.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
main/fabruic/: all.html  enum.Store.html  fn.generate_self_signed.html  index.html  sidebar-items.js  struct.Builder.html  struct.Certificate.html  struct.CertificateChain.html  struct.Connecting.html  struct.Connection.html  struct.Endpoint.html  struct.Incoming.html  struct.KeyPair.html  struct.PrivateKey.html  struct.Receiver.html  struct.Sender.html  trait.Dangerous.html
main/fabruic/certificate/: fn.generate_self_signed.html  struct.Certificate.html  struct.PrivateKey.html  trait.Dangerous.html
main/fabruic/dangerous/: index.html  sidebar-items.js  trait.Builder.html  trait.Certificate.html  trait.Endpoint.html  trait.KeyPair.html  trait.PrivateKey.html
main/fabruic/error/: enum.CertificateError.html  enum.Config.html  enum.Connect.html  enum.ConnectError.html  enum.Connecting.html  enum.ConnectionError.html  enum.EndpointError.html  enum.Err.html  enum.Error.html  enum.ErrorKind.html  enum.Incoming.html  enum.OsStore.html  enum.ParseCertificate.html  enum.ParseError.html  enum.ReadError.html  enum.Receiver.html  enum.Sender.html  enum.Stream.html  enum.TLSError.html  enum.UrlParseError.html  enum.WebPkiError.html  enum.WriteError.html  enum.X509Error.html  index.html  sidebar-items.js  struct.AddrParseError.html  struct.AlreadyClosed.html  struct.Builder.html  struct.Certificate.html  struct.CertificateChain.html  struct.Connecting.html  struct.Connection.html  struct.Endpoint.html  struct.IoError.html  struct.KeyPair.html  struct.KeyRejected.html  struct.ParseError.html  struct.PrivateKey.html  struct.ResolveError.html  type.Result.html
main/fabruic/quic/connection/: struct.Connection.html
main/fabruic/quic/connection/connecting/: struct.Connecting.html
main/fabruic/quic/connection/incoming/: struct.Incoming.html
main/fabruic/quic/connection/receiver/: struct.Receiver.html
main/fabruic/quic/connection/sender/: struct.Sender.html
main/fabruic/quic/endpoint/: struct.Endpoint.html  trait.Dangerous.html
main/fabruic/quic/endpoint/builder/: enum.Store.html  struct.Builder.html  (+1 more)
main/fabruic/x509/: struct.KeyPair.html  trait.Dangerous.html
main/fabruic/x509/certificate/: struct.Certificate.html
main/fabruic/x509/certificate_chain/: struct.CertificateChain.html
main/fabruic/x509/private_key/: struct.PrivateKey.html  trait.Dangerous.html
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/cmp/: trait.Eq.js  trait.Ord.js  trait.PartialEq.js  trait.PartialOrd.js
main/implementors/core/convert/: trait.AsRef.js  trait.From.js  trait.TryFrom.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/error/: trait.Error.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/implementors/core/hash/: trait.Hash.js
main/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
main/implementors/fabruic/dangerous/: trait.KeyPair.js
main/implementors/fabruic/x509/: trait.Dangerous.js
main/implementors/futures_core/stream/: trait.FusedStream.js  trait.Stream.js
main/implementors/serde/de/: trait.Deserialize.js
main/implementors/serde/ser/: trait.Serialize.js
main/implementors/std/error/: trait.Error.js
main/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/zeroize/: trait.Zeroize.js
main/src/fabruic/: certificate.rs.html  dangerous.rs.html  error.rs.html  lib.rs.html
main/src/fabruic/quic/: mod.rs.html  task.rs.html
main/src/fabruic/x509/: certificate.rs.html  certificate_chain.rs.html  mod.rs.html  private_key.rs.html
src/: certificate.rs  dangerous.rs  error.rs  lib.rs
src/quic/: mod.rs  task.rs
src/quic/connection/: connecting.rs  incoming.rs  mod.rs  receiver.rs  receiver_stream.rs  sender.rs
src/quic/endpoint/: builder.rs  mod.rs
src/quic/endpoint/builder/: config.rs  mod.rs
src/x509/: certificate.rs  certificate_chain.rs  mod.rs  private_key.rs
tests/: local-connections.rs
(+15 files in other folders)
