[package]
name = "fabruic"
version = "0.0.1-dev-1"
description = "A simple QUIC-based protocol using quinn. Written for PliantDB and Cosmic Verge."
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/fabruic"
keywords = ["quic"]
categories = ["network-programming"]
edition = "2018"
resolver = "2"

[features]
dangerous = []
default = []
trust-dns = ["trust-dns-resolver"]
test = []

[dependencies]
bincode = "1"
bytes = "1"
allochronic-util = "0.0.1-dev-1"
flume = "0.10"
futures-channel = "0.3"
futures-util = "0.3"
if_chain = "1"
parking_lot = { version = "0.11", features = ["send_guard"] }
pin-project = "1"
quinn = { version = "0.7", default-features = false, features = ["tls-rustls"] }
rcgen = { version = "0.8", default-features = false }
ring = "0.16"
rustls = { version = "0.19", default-features = false, features = [
	"dangerous_configuration"
] }
serde = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
trust-dns-resolver = { version = "0.20", default-features = false, features = [
	"dns-over-https-rustls",
	"dnssec-ring",
	"tokio-runtime",
], optional = true }
url = "2"
webpki = { version = "0.21", default-features = false }
x509-parser = "0.9"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
anyhow = "1"
fabruic = { path = "", features = ["test", "trust-dns"] }
quinn-proto = { version = "0.7", default-features = false }
tokio = { version = "1", features = ["macros"] }

[profile.release]
codegen-units = 1
lto = true

[package.metadata.docs.rs]
all-features = true
targets = []
