[package]
name = "fabruic"
version = "0.0.1-dev.2"
description = "A simple QUIC-based protocol using quinn. Written for PliantDB and Cosmic Verge."
license = "MIT OR Apache-2.0"
repository = "https://github.com/khonsulabs/fabruic"
keywords = ["quic"]
categories = ["network-programming"]
edition = "2021"

[features]
dangerous = []
default = ["rcgen"]
test = []
trust-dns = ["trust-dns-resolver"]

[dependencies]
async-trait = "0.1"
bincode = "1"
bytes = "1"
ct-logs = "0.9"
flume = "0.10"
futures-channel = "0.3"
futures-executor = "0.3"
futures-util = "0.3"
if_chain = "1"
parking_lot = { version = "0.11", features = ["send_guard"] }
pin-project = "1"
quinn = "0.8"
rcgen = { version = "0.8", default-features = false, optional = true }
ring = "0.16"
rustls = { version = "0.20", default-features = false, features = [
	"dangerous_configuration",
] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
trust-dns-resolver = { version = "0.21.0-alpha.4", default-features = false, optional = true, features = [
	"dns-over-https-rustls",
	"dnssec-ring",
	"tokio-runtime",
] }
url = "2"
webpki = { version = "0.22", default-features = false }
webpki-roots = "0.22"
rustls-native-certs = "0.6"
x509-parser = "0.12"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
anyhow = "1"
fabruic = { path = "", features = ["rcgen", "test"] }
quinn-proto = { version = "0.8", default-features = false }
tokio = { version = "1", features = ["macros"] }
trust-dns-proto = "0.21.0-alpha.4"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.docs.rs]
features = ["dangerous", "rcgen", "trust-dns"]
targets = []
